--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@s-is-for-store/react": "^3.0.0",
+    "firebase": "^7.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "s-is-for-store": "^3.0.1"
