--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "jest"
+    "test": "tslint --project ./tsconfig.json && jest"
   },
   "author": "Grant Heath",
   "license": "UNLICENSED",
