--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@s-is-for-store/react": "^3.0.0",
     "firebase": "^7.7.0",
+    "jss": "^10.0.4",
+    "jss-preset-default": "^10.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-jss": "^10.0.4",
     "s-is-for-store": "^3.0.1"
   },
   "devDependencies": {
