--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "s-is-for-store": "^3.0.1"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.9.1",
+    "@types/jsdom": "^12.2.4",
+    "@types/jsdom-global": "^3.0.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-plugin-import": "^2.20.0",
@@ -38,6 +41,8 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "firebase-tools": "^7.12.1",
     "jest": "^25.1.0",
+    "jsdom": "^16.1.0",
+    "jsdom-global": "^3.0.2",
     "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
