Configure webpack to build a development version of the application.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "squeakbox-49077"
+    "default": "squeakbox-49077",
+    "development": "squeakbox-development"
   }
 }
