--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "cypress": "^4.0.1",
-    "cypress-firebase": "^0.10.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
@@ -47,6 +46,7 @@
     "jsdom-global": "^3.0.2",
     "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
