--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,13 @@
 {
-  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "allowJs": true,
+    "baseUrl": "../node_modules",
+    "resolveJsonModule": true,
+    "types": [
+      "cypress"
+    ]
+  },
   "include": [
-    "../node_modules/cypress",
-    "./*/*.ts"
+    "**/*.*"
   ]
 }
