--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/express": "^4.17.3",
     "@types/jest": "^24.9.1",
     "@types/jsdom": "^12.2.4",
     "@types/jsdom-global": "^3.0.1",
+    "@types/node": "^13.9.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
+    "body-parser": "^1.19.0",
     "cypress": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -40,7 +43,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "express": "^4.17.1",
+    "firebase-admin": "^8.9.2",
     "firebase-tools": "^7.12.1",
+    "http-status-codes": "^1.4.0",
     "jest": "^25.1.0",
     "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
