--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "allowJs": true,
+    "strict": true,
     "baseUrl": "../node_modules",
-    "resolveJsonModule": true,
-    "types": [
-      "cypress"
-    ]
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "types": ["cypress"]
   },
   "include": [
-    "**/*.*"
+    "**/*.ts", "plugins/index.js"
   ]
 }
