--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "s-is-for-store": "^3.0.1"
   },
   "devDependencies": {
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+    "@cypress/webpack-preprocessor": "^4.1.3",
     "@types/concurrently": "^5.1.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -37,8 +39,6 @@
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.1.0",
     "cypress": "^4.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -49,10 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "express": "^4.17.1",
     "firebase-admin": "^8.9.2",
-    "firebase-tools": "^7.12.1",
-    "http-status-codes": "^1.4.0",
     "jest": "^25.1.0",
     "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
