--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ build/
 coverage/
 node_modules/
 firebase.config.ts
+firebase.config.development.js
 firebase.config.development.ts
 app.js
 .firebase/
