--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cy:run": "cypress run --headed",
     "start": "webpack-dev-server",
     "test": "npm run test:lint && npm run test:unit && npm run test:e2e",
-    "test:e2e": "webpack --config webpack.config.development.js -o ./public/app.js --mode 'development' && ./scripts/runEnd2End.ts",
+    "test:e2e": "webpack --config webpack.config.development.js -o ./public/app.js --mode 'development' && cypress run",
     "test:lint": "eslint --ext .ts ./src",
     "test:unit": "jest"
   },
