--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "deploy": "npm test && webpack -o ./public/app.js --mode 'production' && firebase deploy",
     "cy:run": "cypress run --headed",
     "start": "webpack-dev-server",
-    "test": "npm run test:lint && npm run test:unit && npm run test:e2e",
-    "test:e2e": "webpack --config webpack.config.development.js -o ./public/app.js --mode 'development' && cypress run",
+    "test": "source environment.development.sh && npm run test:full",
+    "test:full": "npm run test:lint && npm run test:unit && npm run test:e2e",
+    "test:e2e": "webpack -o ./public/app.js --mode 'development' && cypress run",
     "test:lint": "eslint --ext .ts ./src",
     "test:unit": "jest"
   },
