--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,10 +24,10 @@ jobs:
 
     env:
       FIREBASE_API_KEY: ${{secrets.DEVELOPMENT_FIREBASE_API_KEY}}
-      FIREBASE_AUTH_DOMAIN: ${{secrets.development.DEVELOPMENT_FIREBASE_AUTH_DOMAIN}}
-      FIRESTORE_URL: ${{secrets.development.DEVELOPMENT_FIRESTORE_URL}}
-      FIREBASE_PROJECT_ID: ${{secrets.development.DEVELOPMENT_FIREBASE_PROJECT_ID}}
-      FIREBASE_BUCKET: ${{secrets.development.DEVELOPMENT_FIREBASE_BUCKET}}
-      FIREBASE_MESSAGING_ID: ${{secrets.development.DEVELOPMENT_FIREBASE_MESSAGING_ID}}
-      FIREBASE_APP_ID: ${{secrets.development.DEVELOPMENT_FIREBASE_APP_ID}}
+      FIREBASE_AUTH_DOMAIN: ${{secrets.DEVELOPMENT_FIREBASE_AUTH_DOMAIN}}
+      FIRESTORE_URL: ${{secrets.DEVELOPMENT_FIRESTORE_URL}}
+      FIREBASE_PROJECT_ID: ${{secrets.DEVELOPMENT_FIREBASE_PROJECT_ID}}
+      FIREBASE_BUCKET: ${{secrets.DEVELOPMENT_FIREBASE_BUCKET}}
+      FIREBASE_MESSAGING_ID: ${{secrets.DEVELOPMENT_FIREBASE_MESSAGING_ID}}
+      FIREBASE_APP_ID: ${{secrets.DEVELOPMENT_FIREBASE_APP_ID}}
       SERVICE_ACCOUNT_CREDENTIALS: ${{secrets.SERVICE_ACCOUNT_CREDENTIALS}}
