--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,25 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  setup:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Cache node modules
+      uses: actions/cache@v1
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: node_modules
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+    - run: npm ci
+
+  test:
 
     runs-on: ubuntu-latest
 
@@ -19,7 +37,6 @@ jobs:
       with:
         node-version: 12.x
     - run: echo "$SERVICE_ACCOUNT_CREDENTIALS" > serviceAccount.json
-    - run: npm ci
     - run: npm run test:full
 
     env:
@@ -31,3 +48,4 @@ jobs:
       FIREBASE_MESSAGING_ID: ${{secrets.DEVELOPMENT_FIREBASE_MESSAGING_ID}}
       FIREBASE_APP_ID: ${{secrets.DEVELOPMENT_FIREBASE_APP_ID}}
       SERVICE_ACCOUNT_CREDENTIALS: ${{secrets.SERVICE_ACCOUNT_CREDENTIALS}}
+      FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
