--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "firebase-admin": "^8.9.2",
+    "firebase-tools": "^7.16.1",
     "jest": "^25.2.0",
     "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
