--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,19 +19,7 @@ jobs:
       with:
         node-version: 12.x
     - run: echo "$SERVICE_ACCOUNT_CREDENTIALS" > serviceAccount.json
-    - name: Cache node modules
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-modules
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-    - run: npm install
-    - run: cypress install
+    - run: npm ci
     - run: npm run test:full
 
     env:
