--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,4 +31,29 @@ jobs:
       FIREBASE_MESSAGING_ID: ${{secrets.DEVELOPMENT_FIREBASE_MESSAGING_ID}}
       FIREBASE_APP_ID: ${{secrets.DEVELOPMENT_FIREBASE_APP_ID}}
       SERVICE_ACCOUNT_CREDENTIALS: ${{secrets.SERVICE_ACCOUNT_CREDENTIALS}}
+
+  deploy: 
+
+    needs: test_and_build
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 12.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+    - run: echo "$SERVICE_ACCOUNT_CREDENTIALS" > serviceAccount.json
+    - run: npm ci
+    - run: npm run deploy
+
+    env:
+      FIREBASE_API_KEY: ${{secrets.PRODUCTION_FIREBASE_API_KEY}}
+      FIREBASE_AUTH_DOMAIN: ${{secrets.PRODUCTION_FIREBASE_AUTH_DOMAIN}}
+      FIRESTORE_URL: ${{secrets.PRODUCTION_FIRESTORE_URL}}
+      FIREBASE_PROJECT_ID: ${{secrets.PRODUCTION_FIREBASE_PROJECT_ID}}
+      FIREBASE_BUCKET: ${{secrets.PRODUCTION_FIREBASE_BUCKET}}
+      FIREBASE_MESSAGING_ID: ${{secrets.PRODUCTION_FIREBASE_MESSAGING_ID}}
+      FIREBASE_APP_ID: ${{secrets.PRODUCTION_FIREBASE_APP_ID}}
       FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
