--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "npm test && webpack -o ./public/app.js --mode 'production' && firebase use production && firebase deploy",
+    "deploy": "webpack -o ./public/app.js --mode 'production' && firebase use production && firebase deploy",
     "cy:run": "cypress run --headed",
     "start": "webpack-dev-server",
     "test": "source environment.development.sh && npm run test:full",
