--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "webpack -o ./public/app.js --mode 'production' && firebase use production && firebase deploy",
     "cy:run": "cypress run --headed",
-    "start": "webpack-dev-server",
+    "deploy": "webpack -o ./public/app.js --mode 'production' && firebase use production && firebase deploy",
+    "start": "source environment.development.sh && webpack-dev-server",
     "test": "source environment.development.sh && npm run test:full",
     "test:full": "npm run test:lint && npm run test:unit && npm run test:e2e",
     "test:e2e": "webpack -o ./public/app.js --mode 'development' && cypress run",
     "test:lint": "eslint --ext .ts ./src",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "test:watch": "source environment.development.sh && jest --watch"
   },
   "author": "Grant Heath",
   "license": "UNLICENSED",
